--- a/deforestation/styles.css
+++ b/deforestation/styles.css
@@ -47,7 +47,7 @@ p {
 
 .divider {
     height: 3px;
-    background-color: #A8B599;
+    background-color: RED;
     margin-top: 10px;
     margin-bottom: 10px;
     }
