--- a/deforestation/styles.css
+++ b/deforestation/styles.css
@@ -47,7 +47,7 @@ p {
 
 .divider {
     height: 3px;
-    background-color: RED;
+    background-color:  #9BAD87;
     margin-top: 10px;
     margin-bottom: 10px;
     }
